<resources>
    <string name="app_name">JUndo-Droid Sample</string>

    <string name="simple_note">simple note</string>
    <string name="list_note">list note</string>
    <string name="todo_note">todo note</string>
    <string name="mood_note">mood note</string>

    <string name="undo">undo</string>
    <string name="redo">redo</string>
    <string name="start_macro">start macro</string>
    <string name="stop_macro">stop macro</string>
    <string name="drop_macro">drop macro</string>
    <string name="play_macro">play macro</string>
    <string name="detail_title_hint">Put here a title</string>
    <string name="detail_text_hint">Put here a text</string>

</resources>
