<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <item
        android:id="@+id/menu_undo"
        android:title="@string/undo"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/menu_redo"
        android:title="@string/redo"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/menu_start_macro"
        android:title="@string/start_macro"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/menu_stop_macro"
        android:title="@string/stop_macro"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/menu_drop_macro"
        android:title="@string/drop_macro"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/menu_play_macro"
        android:title="@string/play_macro"
        app:showAsAction="ifRoom"
        />


</menu>